# subversion-import-wizard

./: Makefile.am  Makefile.in  README  README.md  aclocal.m4  configure  configure.ac  subversion-import-wizard-user.asd  subversion-import-wizard-user.lisp  subversion-import-wizard.asd  subversion-import-wizard.lisp
demo/: import-triangle-flat.lisp  import-triangle-hier.lisp
demo/triangle1/: Makefile
demo/triangle1/demo/: box.poly
demo/triangle2/: triangle.c
doc/: Makefile.am  Makefile.in  package.texi  subversion-import-wizard.info  subversion-import-wizard.texi  texinfo.css
